--- a/script/ob1.css
+++ b/script/ob1.css
@@ -1,15 +1,34 @@
-.h4_page { margin:30px; } /* IOIO add font stuff later.. .*/
+@font-face {
+ font-family: 'Ubuntu';
+ src: url('/font/ubuntu-regular.eot');
+ src: url('/font/ubuntu-regular-webfont.eot?#iefix') format('embedded-opentype'),
+ url('/font/ubuntu-regular-webfont.woff') format('woff'),
+ url('/font/ubuntu-regular-webfont.ttf') format('truetype'),
+ url('/font/ubuntu-regular-webfont.svg#ubunturegular') format('svg');
+ font-weight: normal;
+ font-style: normal;
+}
+@font-face {
+ font-family: 'OpenDyslexic';
+ src: url('/font/OpenDyslexic-Regular.eot');
+ src: url('/font/OpenDyslexic-Regular.eot?#iefix') format('embedded-opentype'),
+ url('/font/OpenDyslexic-Regular.woff') format('woff'),
+ url('/font/OpenDyslexic-Regular.ttf') format('truetype'),
+ url('/font/OpenDyslexic-Regular.svg#ubunturegular') format('svg');
+ font-weight: normal;
+ font-style: normal;
+}
+
+.h4_page { margin:30px; font-family: 'ubuntu'; font-size: 10pt; direction:ltr; }
 .h4_footer { margin:20px; text-align:center; font-size: 80%; }
 .h4_footer .w3cpix { display:inline-block; width:270px; height:50px; vertical-align:top; float:left; }
 #tinyScreen { display:none; }
 h1, .h1 { font-size:2.3rem; }
 .blocker { clear:both; width:90%; }
-#linkedinpix { width:25px; height:25px; }
 .h4_menu { display:inline-block; text-align:right; margin-left:auto; }
 .h4_menu legend { width:100%; display:inline-block; }
 .h4_lean { max-width: 250px; overflow: hidden; overflow-wrap: break-word; list-style-type: none; margin: 0; padding-left: 0; }
 .h4_odd { background-color:white; }
-#shareGroup img { width:25px; height:25px;}
 .h4_menu.column { flex: 1 1 0px; }
 .h4_title.column { flex: 4 1 0px; }
 #bigScreen.row { max-width:96%;}
